fix(accessibility): fix focus for high contrast mode (#267)
This fixes focus in high contrast mode for:

1. Button
2. Link
3. LinkButton
4. ComboBox
5. TextField
6. TextArea
7. Radio
8. Select

---------

--- a/packages/components/src/checkbox/Checkbox.module.css
+++ b/packages/components/src/checkbox/Checkbox.module.css
@@ -19,6 +19,11 @@
   forced-color-adjust: none;
   display: flex;
 
+  @media (forced-colors: active) {
+    outline: 3px solid highlight;
+    outline-offset: -2px;
+  }
+
   & svg {
     width: 1rem;
     height: 1rem;
